--- a/index.html
+++ b/index.html
@@ -21,11 +21,11 @@
 
         <div class="location-not-found">
             <h1>Sorry, Location not found!!!</h1>
-            <img src="/assets/404.jpg" alt="404 Error">
+            <img src="/assets/404.png" alt="404 Error">
         </div>
 
         <div class="weather-body">
-            <img src="/assets/berawan.jpg" alt="Weather Image" class="weather-image">
+            <img src="/assets/cloud.png" alt="Weather Image" class="weather-image">
 
             <div class="weather-box">
                 <p class="temperature">0 <sup>&deg;C</sup></p>
@@ -51,5 +51,6 @@
             </div>
         </div>
     </div>
+    <script src="script.js"></script>
 </body>
 </html>
